# wasmbayesnet

./: .gitignore  CMakeLists.txt  README.md  architecture_design.md  build.bat
frontend/: app.js  demo_murder.json  demo_poker.json  engine.js  index.html  server.py  style.css
src/: BayesNet.hpp  Node.hpp  wrapper.cpp
